  (Arseniy Alekseyev, review by Mark Shinwell and Xavier Leroy)

- GPR#1477: raw_spacetime_lib can now be used in bytecode.
  (Nicolás Ojeda Bär, review by Mark Shinwell)

- GPR#1533: (a) The implementation of Thread.yield for system thread
  now uses nanosleep(1) for enabling better preemption.
  (b) Thread.delay is now an alias for Unix.sleepf.

### Compiler user-interface and warnings:

- GPR#1166: In OCAMLPARAM, an alternative separator can be specified as
  first character (instead of comma) in the set ":|; ,"
  (Fabrice Le Fessant)

- GPR#1358: Fix usage warnings with no mli file
  (Leo White, review by Alain Frisch)

- GPR#1428: give a non dummy location for warning 49 (no cmi found)
  (Valentin Gatien-Baron)

- GPR#1472: Improve error reporting for missing 'rec' in let-bindings
  (Arthur Charguéraud and Armaël Guéneau, with help from Gabriel Scherer and
  Frédéric Bour)

- GPR#1491: Improve error reporting for ill-typed applicative functor
  types, F(M).t.
  (Valentin Gatien-Baron, review by Florian Angeletti and Gabriel Radanne)

- GPR#1496: Refactor the code printing explanation for unification type errors,
  in order to avoid duplicating pattern matches
  (Armaël Guéneau, review by Florian Angeletti and Gabriel Scherer)

- GPR#1505: Add specific error messages for unification errors involving
  functions of type "unit -> _"
  (Arthur Charguéraud and Armaël Guéneau, with help from Leo White, review by
  Florian Angeletti and Gabriel Radanne)

- GPR#1510: Add specific explanation for unification errors caused by type
  constraints propagated by keywords (such as if, while, for...)
  (Armaël Guéneau and Gabriel Scherer, original design by Arthur Charguéraud,
  review by Frédéric Bour, Gabriel Radanne and Alain Frisch)

- GPR#1515: honor the BUILD_PATH_PREFIX_MAP environment variable
  to enable reproducible builds
  (Gabriel Scherer, with help from Ximin Luo, review by Damien Doligez)
