@@ -13,7 +13,8 @@ cross-reference-checker: cross_reference_checker.ml
 check-cross-references: cross-reference-checker
 	$(OCAMLRUN) ./cross-reference-checker \
 	-auxfile $(MANUAL)/texstuff/manual.aux \
-        $(TOPDIR)/utils/warnings.ml
+        $(TOPDIR)/utils/warnings.ml \
+	$(TOPDIR)/bytecomp/translmod.ml
 
 check-stdlib:
 	./check-stdlib-modules $(TOPDIR)
